# CppTasks

./: .gitignore  lab2log..plog
Devs/: CMakeLists.txt  main.cpp
Lab0/: CMakeLists.txt  main.cpp
Lab1/: CMakeLists.txt  InitTest.testsession
Lab1/build_cov/: Makefile  coverage.info  generate_report.bash  lab1
Lab1/build_cov/coverage_report/: index-sort-f.html  index-sort-l.html  index.html
Lab1/build_cov/coverage_report/13/: array.func-c.html  array.func.html  array.gcov.html  bit.func-c.html  bit.func.html  bit.gcov.html  charconv.func-c.html  charconv.func.html  charconv.gcov.html  compare.func-c.html  compare.func.html  compare.gcov.html  format.func-c.html  format.func.html  format.gcov.html  index-sort-f.html  index-sort-l.html  index.html  new.func-c.html  new.func.html  new.gcov.html  span.func-c.html  span.func.html  span.gcov.html  string_view.func-c.html  string_view.func.html  string_view.gcov.html  type_traits.func-c.html  type_traits.func.html  type_traits.gcov.html
Lab1/build_cov/coverage_report/13/bits/: alloc_traits.h.func-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-c.html  char_traits.h.func.html  char_traits.h.gcov.html  charconv.h.func-c.html  charconv.h.func.html  charconv.h.gcov.html  cpp_type_traits.h.func-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  locale_facets.tcc.func-c.html  locale_facets.tcc.func.html  locale_facets.tcc.gcov.html  move.h.func-c.html  move.h.func.html  move.h.gcov.html  new_allocator.h.func-c.html  new_allocator.h.func.html  new_allocator.h.gcov.html  ptr_traits.h.func-c.html  ptr_traits.h.func.html  ptr_traits.h.gcov.html  range_access.h.func-c.html  range_access.h.func.html  range_access.h.gcov.html  ranges_algobase.h.func-c.html  (+29 more)
Lab1/build_cov/coverage_report/13/ext/: alloc_traits.h.func-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
Lab1/build_cov/src/bit_array/: Makefile
Lab1/build_cov/src/bit_array_tests/: Makefile
Lab1/src/: main.cpp
Lab1/src/bit_array/: BitArray.cpp  BitArray.h  CMakeLists.txt
Lab1/src/bit_array_tests/: BitArrayTest.cpp  CMakeLists.txt
Lab2/: CMakeLists.txt  config.yaml
Lab2/.PVS-Studio/State/: ReportState.json  WindowState.json
Lab2/src/: main.cpp
Lab2/src/PrisonGame/: CMakeLists.txt  Game.cpp  Game.h  GameClasses.h  GameConfig.cpp  GameConfig.h  GameConstructor.cpp  GameConstructor.h  PayoffMatrix.cpp  PayoffMatrix.h  Utils.cpp  Utils.h
Lab2/src/PrisonGame/Strategies/: AllStrategies.h  BaseStrategy.cpp  BaseStrategy.h  ConcreteStrategyByName.h  IStrategy.h  StrategyCreator.h
Lab2/src/PrisonGame/Strategies/Creators/: ConcreteAiStrategy.h  ConcreteAlwaysCooperateStrategy.h  ConcreteAlwaysDefectStrategy.h  ConcreteBullyStrategy.h  ConcretePavlovStrategy.h  ConcretePeriodicStrategy.h  ConcreteRandomStrategy.h  ConcreteTitForTatStrategy.h
Lab2/src/PrisonGame/Strategies/Implementations/: AiStrategy.cpp  AiStrategy.h  BullyStrategy.cpp  BullyStrategy.h  ConstStrategy.cpp  ConstStrategy.h  PavlovStrategy.cpp  PavlovStrategy.h  PeriodicStrategy.cpp  PeriodicStrategy.h  RandomStrategy.cpp  RandomStrategy.h  TitForTatStrategy.cpp  TitForTatStrategy.h
Lab2/src/PrisonGame/simple-neural-network/headers/: network_training.h  neural_layer.h  neuron_network.h
Lab2/src/PrisonGame/simple-neural-network/sources/: matrix.cpp  network_training.cpp  neural_layer.cpp  neuron_network.cpp  random_generator.cpp
Lab2/src/PrisonGameTests/: CMakeLists.txt  PrisonGameTests.cpp
Lab2/src/StLogger/: CMakeLists.txt  StLogger.cpp  StLogger.h
Lab3/: CMakeLists.txt
Lab3/src/: TerminalArgsParser.h  TerminalSoundProcessor.cpp  TerminalSoundProcessor.h  main.cpp
Lab3/src/SoundProcessorCore/: CMakeLists.txt  Config.h  IAudioStream.h  InstructionsProcessor.cpp  InstructionsProcessor.h  ProcessorArgs.h  Utils.cpp  Utils.h
Lab3/src/SoundProcessorCore/Converters/: ConvertersFactory.cpp  ConvertersFactory.h  IConverter.h  MixConverter.cpp  MixConverter.h  MuteConverter.cpp  MuteConverter.h  VolumeConverter.cpp  VolumeConverter.h
Lab3/src/SoundProcessorCore/Instr/: IInstructionArgVisitor.h  Instruction.h  InstructionArg.h  InstructionArgParser.h  InstructionArgsContainer.h  InstructionParser.h
Lab3/src/SoundProcessorCore/Wav/: WavAudioStream.cpp  WavAudioStream.h  WavHeader.h
Lab4/: CMakeLists.txt
Lab4/src/: CsvParser.h  CsvPrinter.h  TupleConverter.h  Utils.cpp  Utils.h  a-main.cpp.006t.gimple  main.cpp  main.s
asms/: prog.c  (+1 more)
(+15 files in other folders)
